--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 langchain
+langchain_google_genai
+langchain_tavily
 langgraph
 streamlit
 pandas
@@ -6,3 +8,4 @@ plotly
 dotenv
 typing
 operator
+
